--- a/app/views/user/loan_requests/show.html.erb
+++ b/app/views/user/loan_requests/show.html.erb
@@ -3,29 +3,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="list-group">
-          <div class="list-group-item row">
-            <h4 class="list-group-item-heading">Loan Request ID #<%= @loan_request.id %></h4>
-          </div>
-          <div class="list-group-item row">
-            <h4 class="list-group-item-heading col-md-6">Amount:<br /> <%= number_to_currency(@loan_request.amount) %></h4>
-            <h4 class="list-group-item-heading col-md-6">Interest Earning Potential: $1,147.50</h4>
-          </div>
-          <div class="list-group-item row">
-            <h4 class="list-group-item-heading col-md-6">APR:<br /><%= @loan_request.rate %>%</h4>
-            <h4 class="list-group-item-heading col-md-6">Effective Interest:<br />17.35%</h4>
-          </div>
-          <div class="list-group-item row">
-            <h4 class="list-group-item-heading col-md-6"></h4>
-            <h4 class="list-group-item-heading col-md-6">Estimated Monthly Payments:<br />$183.40</h4>
-          </div>
-          <% if current_user == @user %>
-            <%= link_to "Edit request", edit_loan_request_path(@loan_request.id), class:"link-button" %>
-            <%= button_to "Delete request", loan_request_path(@loan_request.id), method: :delete %>
-          <% elsif current_admin? %>
-            <%= button_to "Delete request", loan_request_path(@loan_request.id), method: :delete %>
-          <% end %>
-          <%= link_to "Add To Cart", cart_items_path(item_id: @loan_request.id), method: 'post', class:"link-button" %>
-          <%= link_to "Back", :back, class:"link-button" %>
+          <%= render partial: "shared/loan_show", locals: { lr:@loan_request, side:@side } %>
         </div>
       </div>
     </div>
