--- a/app/views/contracts/new.html.erb
+++ b/app/views/contracts/new.html.erb
@@ -1,15 +1,44 @@
-<div class="cart-box">
-  <% @loan_requests.each do |lr| %>
-    Borrower: <%= lr.user.first_name + " "  + lr.user.last_name %><br>
-    Amount: <%= number_to_currency(lr.amount) %><br>
-    Term: <%= lr.term %> Months<br>
-    Rate: <%= lr.rate %>%<br><br>
-  <% end %>
-  <% @loan_offers.each do |lo| %>
-    Borrower: <%= lo.user.first_name + " "  + lo.user.last_name %><br>
-    Amount: <%= number_to_currency(lo.amount) %><br>
-    Term: <%= lo.term %> Months<br>
-    Rate: <%= lo.rate %>%<br><br>
-  <% end %>
-  <%= button_to "Submit", contracts_path, method: 'post' %>
-</div>
+	<div class="container">
+		<h3>Pending Contracts</h3>
+		<div class="row">
+      <div class="col-md-6 cart-items cart-box">
+				<table class="table table-striped table-hover">
+					<h4>Loan Requests (<%= @loan_requests.size %>)</h4>
+          <% @loan_requests.each do |lr| %>
+            <tr>
+              <td>
+                <div class="cart-header">
+                  <div class="cart-item-info">
+                    Borrower: <%= lr.user.first_name + " "  + lr.user.last_name %><br>
+                    Amount: <%= number_to_currency(lr.amount) %><br>
+                    Term: <%= lr.term %> Months<br>
+                    Rate: <%= lr.rate %>%<br><br>
+                  </div>
+                </div>
+              </td>
+            </tr>
+          <% end %>
+        </table>
+      </div>
+      <div class="col-md-6 cart-items cart-box">
+				<table class="table table-striped table-hover">
+					<h4>Loan Offers (<%= @loan_offers.size %>)</h4>
+          <% @loan_offers.each do |lr| %>
+            <tr>
+              <td>
+                <div class="cart-header">
+                  <div class="cart-item-info">
+                    Borrower: <%= lr.user.first_name + " "  + lr.user.last_name %><br>
+                    Amount: <%= number_to_currency(lr.amount) %><br>
+                    Term: <%= lr.term %> Months<br>
+                    Rate: <%= lr.rate %>%<br><br>
+                  </div>
+                </div>
+              </td>
+            </tr>
+          <% end %>
+        </table>
+        <%= button_to "Submit", contracts_path, method: 'post' %>
+      </div>
+    </div>
+  </div>
