--- a/app/views/user/loan_requests/show.html.erb
+++ b/app/views/user/loan_requests/show.html.erb
@@ -3,7 +3,29 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="list-group">
-          <%= render partial: "shared/loan_show", locals: { lr:@loan_request, side:@side } %>
+          <div class="list-group-item row">
+            <h4 class="list-group-item-heading">Loan Request ID #<%= @loan_request.id %></h4>
+          </div>
+          <div class="list-group-item row">
+            <h5 class="list-group-item-heading col-md-6">Amount:<br /> <%= number_to_currency(@loan_request.amount) %></h5>
+            <h5 class="list-group-item-heading col-md-6">Interest Earning Potential:<br /><%= number_to_currency(interest(@loan_request)) %></h5>
+          </div>
+          <div class="list-group-item row">
+            <h5 class="list-group-item-heading col-md-6">APR:<br /><%= @loan_request.rate %>%</h5>
+            <h5 class="list-group-item-heading col-md-6">Effective Interest:<br /><%= effective_interest(@loan_request) %>%</h5>
+          </div>
+          <div class="list-group-item row">
+            <h5 class="list-group-item-heading col-md-6">Term:<br /><%= @loan_request.term %> Months</h5>
+            <h5 class="list-group-item-heading col-md-6">Estimated Monthly Payments:<br /><%= number_to_currency(monthly_payment(@loan_request)) %></h5>
+          </div>
+          <% if current_user == @user %>
+            <%= link_to "Edit request", edit_loan_request_path(@loan_request.id), class:"link-button bottom-show-button" %>
+            <%= button_to "Delete request", loan_request_path(@loan_request.id), method: :delete %>
+          <% elsif current_admin? %>
+            <%= button_to "Delete request", loan_request_path(@loan_request.id), method: :delete %>
+          <% else %>
+            <%= link_to "Add To Cart", cart_items_path(item_id: @loan_request.id), method: 'post', class:"link-button bottom-show-button" %>
+          <% end %>
         </div>
       </div>
     </div>
