--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -9,15 +9,15 @@
 				</tr>
 				<tr>
 					<td>Outstanding Loan Offerings</td>
-					<td>3</td>
+					<td><%= @user.loans_count("offers") %></td>
 				</tr>
 				<tr>
 					<td>Approved Loan Offerings</td>
-					<td>4</td>
+					<td><%= @user.approved_loans_count("offers") %></td>
 				</tr>
 				<tr>
 					<td>Total Invested in Loan Offerings</td>
-					<td><%= number_to_currency("120000") %></td>
+					<td><%= number_to_currency(@user.investment("offers")) %></td>
 				</tr>
 			<tr>
 				<td colspan="2"></td>
@@ -32,15 +32,15 @@
 				</tr>
 				<tr>
 					<td>Outstanding Loan Requests</td>
-					<td>0</td>
+					<td><%= @user.loans_count("requests") %></td>
 				</tr>
 				<tr>
 					<td>Approved Loan Requests</td>
-					<td>2</td>
+					<td><%= @user.approved_loans_count("requests") %></td>
 				</tr>
 				<tr>
 					<td>Total Owed in Loan Requests</td>
-					<td><%= number_to_currency("6000") %></td>
+					<td><%= number_to_currency(@user.investment("requests")) %></td>
 				</tr>
 				<tr>
 					<td colspan="2s">
@@ -48,7 +48,7 @@
 				</tr>
 				<tr>
 					<td><b>Portfolio Net Worth</b></td>
-					<td><b><%= number_to_currency("114000") %></b></td>
+					<td><b><%= number_to_currency(@user.net_worth) %></b></td>
 				</tr>
 			</table>
 		</div>
@@ -61,7 +61,7 @@
 					<li role="presentation"><%= link_to "View My Loan Offers", user_loan_offers_path(@user.username) %></li>
 					<li role="presentation"><%= link_to "View My Loan Requests", user_loan_requests_path(@user.username) %></li>
 					<li role="presentation"><%= link_to "View My Contracts", user_contracts_path(@user.username) %></li>
-					<li role="presentation"><%= button_to "Delete Account", user_path(@user), method: :delete %></li>
+					<li role="presentation"><%= button_to "Deactivate Account", user_path(@user), method: :delete %></li>
 				</ul>
 			</nav>
 		</div>
