--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,6 +1,9 @@
 <div class="container">
 	<div class="row user-dashboard">
 		<h1>Administrator Dashboard, Logged in as <%= @user.first_name %></h1>
+		<div class="col-md-3">
+			<%= image_tag @user.image_path, size: "150" %>
+		</div>
 		<div class="col-md-4 stats">
       <table class="table table-striped table-bordered">
         <tr>
@@ -10,18 +13,18 @@
         </tr>
         <tr>
           <td>Active Users</td>
-          <td>3</td>
+          <td><%= User.active_users %></td>
         </tr>
         <tr>
           <td>Inactive Users</td>
-          <td>4</td>
+          <td><%= User.inactive_users %></td>
         </tr>
         <tr>
           <td colspan="2"></td>
         </tr>
         <tr>
           <td>Active Loan Offers</td>
-          <td>20</td>
+          <td><%= LoanOffer.active_loan_offers %></td>
         </tr>
         <tr>
           <td>Completed Loan Offers</td>
@@ -38,14 +41,12 @@
           <td>Completed Loan Requests</td>
           <td>13</td>
         </tr>
-				<%= image_tag @user.image_path, size: "100" %>
       </table>
     </div>
-		<div>
-			<a href="#" id="show-admin-sitewide-nav">Site Wide</a>
-			<a href="#" id="show-admin-user-nav">Profile data</a>
-		</div>
-    <div class="col-md-3 user-menu full-site-nav">
+		<div class="col-md-3">
+			<a href="#" id="show-admin-sitewide-nav">Site Wide Links</a> |
+			<a href="#" id="show-admin-user-nav">Profile Links</a>
+    <div class="user-menu full-site-nav">
 			<nav>
 				<ul class="nav nav-pills nav-stacked nav-admin">
           <li role="presentation"><%= link_to "View All Loan Requests", loan_requests_path %></li>
@@ -54,7 +55,7 @@
 				</ul>
 			</nav>
 		</div>
-		<div class="col-md-3 user-menu admin-user-nav hidden">
+		<div class="user-menu admin-user-nav hidden">
 			<nav>
 				<ul class="nav nav-pills nav-stacked nav-admin">
 					<li role="presentation"><a href="#">Edit My Profile</a></li>
@@ -65,8 +66,6 @@
 				</ul>
 			</nav>
 		</div>
-
-		<div class="col-md-3 user-menu">
-		</div>
+	</div>
 	</div>
 </div>
