--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,15 +13,15 @@
 				</tr>
 				<tr>
 					<td>Outstanding Loan Offerings</td>
-					<td>3</td>
+					<td><%= @user.loans_count("offers") %></td>
 				</tr>
 				<tr>
 					<td>Approved Loan Offerings</td>
-					<td>4</td>
+					<td><%= @user.approved_loans_count("offers") %></td>
 				</tr>
 				<tr>
 					<td>Total Invested in Loan Offerings</td>
-					<td><%= number_to_currency("120000") %></td>
+					<td><%= number_to_currency(@user.investment("offers")) %></td>
 				</tr>
 			<tr>
 				<td colspan="2">
@@ -37,15 +37,15 @@
 				</tr>
 				<tr>
 					<td>Outstanding Loan Requests</td>
-					<td>0</td>
+					<td><%= @user.loans_count("requests") %></td>
 				</tr>
 				<tr>
 					<td>Approved Loan Requests</td>
-					<td>2</td>
+					<td><%= @user.approved_loans_count("requests") %></td>
 				</tr>
 				<tr>
 					<td>Total Owed in Loan Requests</td>
-					<td><%= number_to_currency("6000") %></td>
+					<td><%= number_to_currency(@user.investment("requests")) %></td>
 				</tr>
 				<tr>
 					<td colspan="2s">
@@ -53,7 +53,7 @@
 				</tr>
 				<tr>
 					<td><b>Portfolio Net Worth</b></td>
-					<td><b><%= number_to_currency("114000") %></b></td>
+					<td><b><%= number_to_currency(@user.net_worth) %></b></td>
 				</tr>
 			</table>
 		</div>
